Ros2_workspace/log/build_2022-05-22_15-13-26/got_coffe/stdout_stderr.log
running egg_info
writing ../../build/got_coffe/got_coffe.egg-info/PKG-INFO
writing dependency_links to ../../build/got_coffe/got_coffe.egg-info/dependency_links.txt
writing entry points to ../../build/got_coffe/got_coffe.egg-info/entry_points.txt
writing requirements to ../../build/got_coffe/got_coffe.egg-info/requires.txt
writing top-level names to ../../build/got_coffe/got_coffe.egg-info/top_level.txt
reading manifest file '../../build/got_coffe/got_coffe.egg-info/SOURCES.txt'
writing manifest file '../../build/got_coffe/got_coffe.egg-info/SOURCES.txt'
running build
running build_py
running install
running install_lib
byte-compiling /home/xilinx/wrkspace/install/got_coffe/lib/python3.8/site-packages/got_coffe/nn_pub.py to nn_pub.cpython-38.pyc
  File "/home/xilinx/wrkspace/install/got_coffe/lib/python3.8/site-packages/got_coffe/nn_pub.py", line 111
    def main(args=None):
    ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/xilinx/wrkspace/install/got_coffe/lib/python3.8/site-packages/got_coffe-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/got_coffe/got_coffe.egg-info to /home/xilinx/wrkspace/install/got_coffe/lib/python3.8/site-packages/got_coffe-0.0.0-py3.8.egg-info
running install_scripts
Installing listener script to /home/xilinx/wrkspace/install/got_coffe/lib/got_coffe
Installing talker script to /home/xilinx/wrkspace/install/got_coffe/lib/got_coffe
writing list of installed files to '/home/xilinx/wrkspace/build/got_coffe/install.log'
